Bug 641856.  column-rule needs to work even when overflow is not visible.  r=roc
UltraBlame original commit: 61ce3fc46a8286583bce2b80610642a44efe4d13

--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -154,6 +154,7 @@
   -moz-column-count: inherit;
   -moz-column-width: inherit;
   -moz-column-gap: inherit;
+  -moz-column-rule: inherit;
   
 
   position: static !important;
